--- a/css/pagina3.css
+++ b/css/pagina3.css
@@ -1,7 +1,14 @@
+html{
+    background-image: linear-gradient(#29a2f2, #fefefe);
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
 body{
     background-image: url(../img/pagina3.png);
     width: 100%;
     height: 100vh;
+    background-repeat:no-repeat;
 }
 
 .hand{
