clear input (foutieve input bleef staan)

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@ body{
 }
 
 button {
+  outline: 0;
   background: #108fe8;
   border: 3px solid #fff;
   border-radius: 100%;
@@ -32,7 +33,7 @@ button {
   font-weight: bold;
   position: absolute;
   -webkit-animation: colorchange 20s infinite alternate;
-  /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); */
+  outline: hidden;
   background: transparent;
   padding: 10px 10px;
 }
@@ -78,4 +79,34 @@ button {
 .penguin {
   width: 100%;
   height: 100vh;
+  object-fit: cover;
+}
+
+
+#snow {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-image: url(../img/sneeuw.png);
+  z-index: 1;
+  pointer-events: none;
+  -moz-animation: snow 10s linear infinite;
+  -webkit-animation: snow 10s linear infinite;
+  animation: snow 10s linear infinite;
+
+}
+
+@-moz-keyframes snow {
+  0% { background-position: 0 0, 0 0, 0 0; }
+  100% { background-position: 500px 1000px, 0 400px, 0 300px; }
+}
+
+@-webkit-keyframes snow {
+  0% { background-position: 0 0, 0 0, 0 0; }
+  100% { background-position: 500px 1000px, 0 400px, 0 300px; }
+}
+
+@keyframes snow {
+  0% { background-position: 0 0, 0 0, 0 0; }
+  100% { background-position: 500px 1000px, 0 400px, 0 300px; }
 }
