--- a/css/pagina2.css
+++ b/css/pagina2.css
@@ -14,6 +14,7 @@ body {
 }
 
 input {
+  color: white;
   position: relative;
   background: #108fe8;
   border: 3px solid #fff;
@@ -21,10 +22,11 @@ input {
   margin-left: 25%;
   font-size: 30px;
   font-family: 'school';
-  outline-color: darkgreen;
+  outline-color: none;
   width:50%;
   margin-top: -10%;
   margin-left: 10%;
+  outline: 0;
 }
 
 .afbeelding {
@@ -35,8 +37,10 @@ input {
 }
 
 button {
+  outline: 0;
   font-family: 'school';
   background: #108fe8;
+  color: white;
   border: 3px solid #fff;
   border-radius: 100%;
   box-shadow: 0 -2px 0 3px #0d72b8 inset, 0 5px 5px rgba(3, 25, 41, 0.17), 0 15px rgba(255, 255, 255, 0.25) inset;
@@ -66,7 +70,7 @@ button {
 
  .stop{
   position: absolute;
-  right: 7%;
+  right:8%;
   top: 5%;
   background: hidden;
   border: 3px solid #fff;
@@ -76,4 +80,32 @@ button {
   height: 100px;
   width: 100px;
   font-size: 30px;
+}
+
+#snow {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-image: url(../img/snow.gif);
+  z-index: 1;
+  pointer-events: none;
+  -moz-animation: snow 10s linear infinite;
+  -webkit-animation: snow 10s linear infinite;
+  animation: snow 10s linear infinite;
+
+}
+
+@-moz-keyframes snow {
+  0% { background-position: 0 0, 0 0, 0 0; }
+  100% { background-position: 500px 1000px, 0 400px, 0 300px; }
+}
+
+@-webkit-keyframes snow {
+  0% { background-position: 0 0, 0 0, 0 0; }
+  100% { background-position: 500px 1000px, 0 400px, 0 300px; }
+}
+
+@keyframes snow {
+  0% { background-position: 0 0, 0 0, 0 0; }
+  100% { background-position: 500px 1000px, 0 400px, 0 300px; }
 }
