--- a/css/pagina3.css
+++ b/css/pagina3.css
@@ -18,3 +18,31 @@ body{
  max-height: 50%;
  max-width: 50%;
 }
+
+#snow {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-image: url(../img/snow.gif);
+    z-index: 1;
+    pointer-events: none;
+    -moz-animation: snow 10s linear infinite;
+    -webkit-animation: snow 10s linear infinite;
+    animation: snow 10s linear infinite;
+  
+  }
+  
+  @-moz-keyframes snow {
+    0% { background-position: 0 0, 0 0, 0 0; }
+    100% { background-position: 500px 1000px, 0 400px, 0 300px; }
+  }
+  
+  @-webkit-keyframes snow {
+    0% { background-position: 0 0, 0 0, 0 0; }
+    100% { background-position: 500px 1000px, 0 400px, 0 300px; }
+  }
+  
+  @keyframes snow {
+    0% { background-position: 0 0, 0 0, 0 0; }
+    100% { background-position: 500px 1000px, 0 400px, 0 300px; }
+  }
